# kipo-framework

./: .gitignore  LICENSE  README.md  pyproject.toml
mi_proyecto_demo/: .gitignore  README.md
mi_proyecto_demo/.kipo/: kipo.db
mi_proyecto_demo/pipelines/: example_pipeline.py
src/kipo/: main.py
src/kipo/commands/: history.py  init.py
src/kipo/core/: config.py  context.py  db.py  decorators.py  definitions.py  io.py  models.py  runner.py
src/kipo/web/: app.py
src/kipo/web/templates/: dashboard.html
