[project]
name = "Kipo-Framework"
version = "0.1.0"
description = "Convention over Configuration ETL Framework for Python"
readme = "README.md"
authors = [{ name = "Kipo Team" }]
requires-python = ">=3.9"
dependencies = [
    "polars>=0.20.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-calamine>=0.2.0",
    "xlsxwriter>=3.2.9",
    "fastexcel>=0.16.0",
    "sqlmodel>=0.0.31",
]

[project.scripts]
kipo = "kipo.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kipo"]
